--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Black Page</title>
     <link rel="stylesheet" href="css/black.css">
-    <link rel="shortcut icon" href="images/black_favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/black_favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:700i" rel="stylesheet">
@@ -31,7 +31,7 @@
     <footer>
         <p>Scary Inc.</p>
         <div>
-            <img src="images/black_logo.jpg" alt="Логотип">
+            <img src="Horror-page/images/black_logo.jpg" alt="Логотип">
         </div>
     </footer>
 </body>
